# Pylenium_Lambda_Parallel_Test

Pylenium_with_lambdatest/: pyproject.toml
Pylenium_with_lambdatest/Test/: pylenium.json  pyproject.toml  test_google_search_lambda.py
Pylenium_with_lambdatest/Test/CICD/: run_pylenium.sh
