[tool.poetry]
name = "pylenium_with_lambdatest"
version = "0.1.0"
description = ""
authors = ["Pratik K Sarangi <81045908+psarangi550@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyleniumio = "^1.15.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
